removes useless test, adds --add-modules comment for javafx.web to be include in vm options